# DataPilot-Studio

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml  s -ExecutionPolicy RemoteSigned) ; (& dProject Master FolderDataPilot-Studio.venvScriptsActivate.ps1)
apps/api/: __init__.py
apps/web/: eslint.config.js  index.html  package.json  playwright.config.ts  vite.config.ts
docs/adr/: ADR-001-technology-stack.md  ADR-002-dynamic-schema-model.md  ADR-003-workflow-configuration-format.md  ADR-004-discovery-regions-and-headers.md  ADR-005-safe-expression-tree.md  ADR-006-local-job-and-checkpoint-boundary.md  ADR-007-metadata-and-workflow-migrations.md  ADR-008-versioned-composition-plans.md  ADR-009-exact-join-cardinality-gate.md  ADR-010-derived-output-packages.md  ADR-011-staged-reconciliation-waterfall.md  ADR-012-governed-fuzzy-candidates.md  ADR-013-immutable-review-evidence.md  ADR-014-reconciliation-schema-versions.md  ADR-015-typed-workflow-dag-orchestration.md  ADR-016-react-flow-visual-canvas.md
docs/architecture/: AGGREGATION_ENGINE.md  APPEND_UNION_ENGINE.md  BACKGROUND_EXECUTION.md  CHECKPOINT_AND_RECOVERY.md  DAG_RUNTIME.md  DATABASE_MIGRATIONS.md  DATASET_COMPARISON.md  DATA_FLOW.md  (+25 more)
plugins/: __init__.py  interfaces.py
scripts/: benchmark_export.py  benchmark_m1b.py  benchmark_m2a.py  benchmark_m2b.py  benchmark_m3a.py  generate_composition_fixtures.py  generate_dag_templates.py  generate_demo_profiles.py  generate_fixtures.py  generate_golden_workbook.py  validate_workflow.py
tests/: conftest.py
(+206 files in other folders)
