[build-system]
requires = ["setuptools==82.0.1", "wheel==0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "datapilot-studio"
version = "0.1.0"
description = "Local-first metadata-driven data automation platform"
requires-python = ">=3.12"
dependencies = [
  "duckdb==1.5.4",
  "fastapi==0.139.0",
  "openpyxl==3.1.5",
  "polars==1.42.1",
  "pydantic==2.13.4",
  "python-multipart==0.0.22",
  "uvicorn[standard]==0.51.0",
  "XlsxWriter==3.2.9",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "mypy==1.18.2",
  "pytest==9.1.1",
  "pytest-asyncio==1.3.0",
  "ruff==0.15.22",
]

[tool.setuptools.packages.find]
include = ["apps*", "packages*", "plugins*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = ["performance: opt-in performance baseline"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["apps.api", "packages", "plugins"]
plugins = ["pydantic.mypy"]
exclude = ["tests/fixtures"]

[[tool.mypy.overrides]]
module = ["openpyxl", "openpyxl.*", "xlsxwriter"]
ignore_missing_imports = true
